Refactor RecordProcessorTest to enhance parameterization and improve routing strategy handling